--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
     "web-vitals": "^1.1.2"
